--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </section>
 
-    <main>
+    <main class="contenedor sombra">
         <h2>Mis servicios</h2>
 
         <section>
